--- a/src/components/atoms/ModalSimulation/style.css
+++ b/src/components/atoms/ModalSimulation/style.css
@@ -3,10 +3,18 @@
     border-radius: 20px;
     padding: 10px;
     width: 300px;
+    height: 350px;
     background-color: #fff;
     box-shadow: 4px 4px 10px 0px rgb(0 0 0 / 55%);
+    text-align: center;
+    cursor: pointer;
 }
 
 .card_sim img{
     width: 300px;
+}
+
+h3{
+    margin: 0;
+    padding: 5px 0;
 }
