--- a/src/pages/SimulationGallery/style.css
+++ b/src/pages/SimulationGallery/style.css
@@ -1,3 +1,12 @@
+.simulation-gallery{
+    min-height: 100vh;
+    background-color: var(--yellow-grey-5-hex);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -22,9 +31,12 @@
 
 .footer{
     display: flex;
-    justify-content: end;
-    height: 100px;
+    justify-content: flex-end;
     background-color: #F2F2F2;
+}
+
+.footer > button{
+    margin: 20px;
 }
 
 .overlay{
