--- a/src/components/atoms/Input/style.css
+++ b/src/components/atoms/Input/style.css
@@ -1,4 +1,4 @@
-input {
+.styledInput {
     margin: 5px 0;
     border: 1px solid var(--yellow-grey-1-hex);
     border-radius: 5px;
@@ -7,17 +7,17 @@ input {
     outline: none;
 }
 
-input:focus, input:focus-visible {
+.styledInput:focus, .styledInput:focus-visible {
     border-color: var(--yellow-grey-4-hex);
 }
 
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+.styledInput::-webkit-outer-spin-button,
+.styledInput::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type=number] {
+.styledInput[type=number] {
   -moz-appearance: textfield;
 }
